--- a/DQN_discrete_classic_controls.ipynb
+++ b/DQN_discrete_classic_controls.ipynb
@@ -323,7 +323,7 @@
         "id": "3yX7u8g1NOno"
       },
       "source": [
-        "In addition, we created some other functions that will help us to speed up learning and manage the best achievement of an agent. These functions are custom and specific for each environment."
+        "In addition, we created some other functions that will help us to speed up learning and manage the best results. These functions are custom and specific for each environment."
       ]
     },
     {
