--- a/DQN_discrete_classic_controls.ipynb
+++ b/DQN_discrete_classic_controls.ipynb
@@ -42,7 +42,7 @@
         "id": "tCAWNkTAM9fu",
         "outputId": "83d9475f-7d3b-4d28-fb7a-c2ffc811ea96"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "BjZ8BKzkdX19"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "wzT1mkCs1uop"
       },
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "dwJVEVZmw4_t"
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "DeE-NBhc5cCU"
       },
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "foZ14ENd_tE1"
       },
@@ -336,6 +336,7 @@
       "source": [
         "def mountain_car_reward_function(state, max_step, step):\n",
         "    if state[0] >= 0.5:\n",
+        "        print(\"Peekaboo, I see you! :)\")\n",
         "        return (max_step-step) *(1+0.5)**2\n",
         "    if state[0] > -0.4:\n",
         "        return (1+state[0])**2\n",
@@ -350,6 +351,7 @@
         "def acrobot_reward_function(state, max_step, step):\n",
         "    v = -state[0] - ((state[0] * state[2]) - (state[1] * state[3]))\n",
         "    if v > 1:\n",
+        "        print(\"Peekaboo, I see you! :)\")\n",
         "        return (max_step-step) *(1 + 1)**2\n",
         "    if v > -1.5:\n",
         "        return (1+v)**2\n",
@@ -358,7 +360,18 @@
       "metadata": {
         "id": "SxJ380uDSF4m"
       },
-      "execution_count": 76,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "c7Uj6xTTxYCv"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,36 +379,46 @@
       "source": [
         "\n",
         "def mountain_car_best_achievement(step, best_steps):\n",
-        "  return step <= best_steps"
+        "  return step <= best_steps\n",
+        "\n",
+        "def mountain_car_done(step, best_steps, done):\n",
+        "  return done"
       ],
       "metadata": {
         "id": "irMCeDj_WB4q"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def acrobot_best_achievement(step, best_steps):\n",
-        "  return step <= best_steps"
+        "  return step <= best_steps\n",
+        "\n",
+        "def acrobot_done(step, best_steps, done):\n",
+        "  return done"
       ],
       "metadata": {
         "id": "eJVh_8LfWAYa"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def cartpole_best_achievement(step, best_steps):\n",
+        "  return step >= best_steps\n",
+        "\n",
+        "def cartpole_done(step, best_steps, done):\n",
+        "  if step >= 200: print(\"Peekaboo, I see you! :)\")\n",
         "  return step >= best_steps"
       ],
       "metadata": {
         "id": "2k7LfEZtvpvW"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,6 +442,7 @@
         "  if(game_name == \"CartPole-v1\"):\n",
         "    reward_function = None\n",
         "    best_achievement = cartpole_best_achievement\n",
+        "    is_done = cartpole_done\n",
         "    max_episodes = 600\n",
         "    episode_min_epsilon =500\n",
         "    min_epsilon = 0.01\n",
@@ -428,6 +452,7 @@
         "  if(game_name == \"MountainCar-v0\"):\n",
         "    reward_function = mountain_car_reward_function\n",
         "    best_achievement = mountain_car_best_achievement\n",
+        "    is_done = mountain_car_done\n",
         "    max_episodes = 700\n",
         "    episode_min_epsilon =600\n",
         "    min_epsilon = 0.05\n",
@@ -437,6 +462,7 @@
         "  if(game_name == \"Acrobot-v1\"):\n",
         "    reward_function = acrobot_reward_function\n",
         "    best_achievement = acrobot_best_achievement\n",
+        "    is_done = acrobot_done\n",
         "    max_episodes = 600\n",
         "    episode_min_epsilon =500\n",
         "    min_epsilon = 0.01\n",
@@ -444,12 +470,12 @@
         "    best_score = 0\n",
         "    best_steps = max_steps\n",
         "\n",
-        "  return reward_function, best_achievement, max_episodes, episode_min_epsilon, min_epsilon, max_steps, best_score, best_steps\n"
+        "  return reward_function, best_achievement, is_done, max_episodes, episode_min_epsilon, min_epsilon, max_steps, best_score, best_steps\n"
       ],
       "metadata": {
         "id": "H9g6HGhWXlJ2"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,12 +495,12 @@
       "metadata": {
         "id": "QtHPnlGB_iIt"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "Z-s-9ukS_d7R"
       },
@@ -507,7 +533,7 @@
         "game_name = \"Acrobot-v1\"\n",
         "\n",
         "#\n",
-        "reward_function, best_achievement, max_episodes, episode_min_epsilon, min_epsilon, max_steps, best_score, best_steps = get_game_properties(game_name)\n",
+        "reward_function, best_achievement, is_done, max_episodes, episode_min_epsilon, min_epsilon, max_steps, best_score, best_steps = get_game_properties(game_name)\n",
         "\n",
         "#\n",
         "env = gym.make(game_name)\n",
@@ -528,7 +554,7 @@
       "metadata": {
         "id": "IrHnNZioeNy4"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,12 +566,12 @@
       "metadata": {
         "id": "3wCNIAYKMyK8"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "Be4uuUhkzuN9",
         "colab": {
@@ -1388,12 +1414,11 @@
         "\n",
         "        score += reward\n",
         "        if done:\n",
-        "            print(\"Peekaboo, I see you! :)\")\n",
         "            break\n",
         "    scores.append(score)\n",
         "    steps.append(step+1)\n",
         "    if best_achievement(step + 1, best_steps):\n",
-        "        if done:  agent.save_model()\n",
+        "        if is_done(step + 1, best_steps, done):  agent.save_model()\n",
         "        best_steps = step + 1\n",
         "        if (score > best_score): best_score = score\n",
         "    print(\"\\rEpisode: {}, Steps: {}, Best Steps: {}, Score: {:.1f}, Best_Score: {:.1f}, epsilon: {:.3f}\".format(episode, step + 1, best_steps, score, best_score, epsilon))\n",
@@ -1403,7 +1428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "lha6ER7c83A9",
         "colab": {
@@ -1455,7 +1480,7 @@
         },
         "outputId": "75cc5b1e-75af-4de7-8674-bebf36e85e2b"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1480,7 +1505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "89OMTPB63AHL"
       },
@@ -1495,7 +1520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "v-wMO2VH3AHL",
         "colab": {
@@ -1652,7 +1677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "h2Ly-tEw3AHM",
         "colab": {
